--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,18 @@ html {
 }
 
 body {
-    display: flex;
-    flex-direction: column;
     font-family: inherit;
     line-height: inherit;
     margin: 0;
 }
 
-html, body {
+html, body, #app {
     height: 100%;
+}
+
+#app {
+    display: flex;
+    flex-direction: column;
 }
 
 .a11y-hidden {
